--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "handlebars": "^4.7.8",
+    "passport": "^0.7.0",
+    "passport-oauth": "^1.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
