--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport-oauth": "^1.0.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-webview": "^13.6.4",
     "request": "^2.88.2"
   },
   "devDependencies": {
