--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@firebase/firestore": "^4.4.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase": "10.7.1",
     "handlebars": "^4.7.8",
     "passport": "^0.7.0",
     "passport-oauth": "^1.0.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-elements": "^3.4.3",
+    "react-native-gifted-chat": "^2.4.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-webview": "^13.6.4",
     "request": "^2.88.2"
   },
