--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.4.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
@@ -25,6 +26,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-screens": "^3.29.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-webview": "^13.6.4",
     "request": "^2.88.2"
