--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "^13.6.4",
     "request": "^2.88.2"
   },
