--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "passport": "^0.7.0",
     "passport-oauth": "^1.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.4",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-gifted-chat": "^2.4.0",
