--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "^0.19.10",
     "react-native-webview": "^13.6.4",
     "request": "^2.88.2"
   },
