--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@firebase/analytics": "^0.10.1",
     "@firebase/app": "^0.9.27",
+    "@firebase/auth": "^1.6.0",
     "@firebase/firestore": "^4.4.1",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
