--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@firebase/firestore": "^4.4.1",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
+    "expo-linking": "^6.2.2",
+    "expo-web-browser": "~12.8.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "firebase": "10.7.1",
@@ -27,15 +29,19 @@
     "passport-oauth": "^1.0.0",
     "react": "18.2.0",
     "react-native": "^0.73.4",
+    "react-native-app-auth": "^7.2.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.10",
     "react-native-webview": "^13.6.4",
+    "react-native-worklets-core": "^1.3.2",
     "request": "^2.88.2"
   },
   "devDependencies": {
